add register and login nav button

--- a/templates/participants/register.html.twig
+++ b/templates/participants/register.html.twig
@@ -2,7 +2,7 @@
 {% form_theme registerForm 'bootstrap_4_horizontal_layout.html.twig' %}
 
 {% block body %}
-<div style="max-width: 40%; margin: 20px 0 0 2%;">
+<div style="max-width: 60%; margin: 0 auto; position: relative; top: 5em">
     {{  form_start(registerForm) }}
 
     {{ form_widget(registerForm) }}
