--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Sortir.com{% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -15,6 +16,8 @@
         <script>{% block javascripts %}{% endblock %}</script>
     </head>
     <body>
+        {% set currentPath = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) %}
+
         {% block entete %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="{{ path('home') }}">Sortir.com</a>
@@ -26,6 +29,22 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Sorties <span class="sr-only">(current)</span></a>
                         </li>
+                    </ul>
+                </div>
+                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                    <ul class="navbar-nav ml-auto">
+                        {% if is_granted("ROLE_USER") %}
+                            <li class={% if path("participant_logout") in currentPath %} "nav-item active" {% else %} "nav-item" {% endif %}>
+                                <a class="nav-link" href="{{ path("participant_logout") }}" title="Bucket-List | Logout">Logout <i class="fa fa-sign-out" aria-hidden="true"></i><span class="sr-only"></span></a>
+                            </li>
+                        {% else %}
+                            <li class={% if path("participant_register") in currentPath %} "nav-item active" {% else %} "nav-item" {% endif %}>
+                                <a class="nav-link" href="{{ path("participant_register") }}" title="Bucket-List | Register">Register<span class="sr-only"></span></a>
+                            </li>
+                            <li class={% if path("participant_login") in currentPath %} "nav-item active" {% else %} "nav-item" {% endif %}>
+                                <a class="nav-link" href="{{ path("participant_login") }}" title="Bucket-List | Login">Login <i class="fa fa-sign-in" aria-hidden="true"></i><span class="sr-only"></span></a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </nav>
