--- a/templates/participants/login.html.twig
+++ b/templates/participants/login.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div style="max-width: 40%; margin: 20px 0 0 2%;">
+<div style="max-width: 35%; margin: 0 auto; position: relative; top: 10em">
     <form method="POST">
         <div class="form-group">
-            <label for="userName">User name</label>
-            <input type="text" name="_username" class="form-control" id="userName" placeholder="Enter user name">
+            <label for="pseudo">Pseudo</label>
+            <input type="text" name="_pseudo" class="form-control" id="pseudo" placeholder="Votre pseudo">
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" name="_password" class="form-control" id="password" placeholder="Password">
+            <label for="mdp">Password</label>
+            <input type="password" name="_mdp" class="form-control" id="mdp" placeholder="Mot de passe">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Connexion</button>
   </form>
 </div>
 {% endblock %}
