--- a/templates/participants/login.html.twig
+++ b/templates/participants/login.html.twig
@@ -4,12 +4,12 @@
 <div style="max-width: 35%; margin: 0 auto; position: relative; top: 10em">
     <form method="POST">
         <div class="form-group">
-            <label for="pseudo">Pseudo</label>
-            <input type="text" name="_pseudo" class="form-control" id="pseudo" placeholder="Votre pseudo">
+            <label for="username">Pseudo</label>
+            <input type="text" name="_username" class="form-control" id="username" placeholder="Votre pseudo">
         </div>
         <div class="form-group">
-            <label for="mdp">Password</label>
-            <input type="password" name="_mdp" class="form-control" id="mdp" placeholder="Mot de passe">
+            <label for="password">Password</label>
+            <input type="password" name="_password" class="form-control" id="password" placeholder="Mot de passe">
         </div>
         <button type="submit" class="btn btn-primary">Connexion</button>
   </form>
