--- a/templates/participants/login.html.twig
+++ b/templates/participants/login.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 {% block body %}
 <div id="formLog">
-    {% if error is not null %}<span id="error">Votre identifiant ou votre mot de passe est incorrect.</span>{% endif %}
+    {% if error is not null %}<span id="error">Votre identifiant ou votre mot de passe est incorrect.{{ error }}</span>{% endif %}
     <form method="POST">
         <div class="form-group">
             <label for="username">Pseudo</label>
@@ -24,7 +24,9 @@
             <input type="password" name="_password" class="form-control" id="password" placeholder="Mot de passe">
         </div>
         <button type="submit" class="btn btn-primary">Connexion</button>
-  </form>
+        <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+        <label for="remember_me">Keep me logged in</label>
+    </form>
 </div>
 {% endblock %}
 
