--- a/templates/participants/register.html.twig
+++ b/templates/participants/register.html.twig
@@ -6,6 +6,8 @@
     {{  form_start(registerForm) }}
 
     {{ form_widget(registerForm) }}
+
+    <button type="submit" class="btn btn-primary">S'enregistrer</button>
     
     {{  form_end(registerForm) }}
 </div>
