Création sorties + participant et sortie repo + navbar

--- a/templates/participants/login.html.twig
+++ b/templates/participants/login.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 {% block body %}
 <div id="formLog">
-    {% if error is not null %}<span id="error">Votre identifiant ou votre mot de passe est incorrect.{{ error }}</span>{% endif %}
+    {% if error is not null %}<span id="error">Votre identifiant ou votre mot de passe est incorrect.</span>{% endif %}
     <form method="POST">
         <div class="form-group">
             <label for="username">Pseudo</label>
