liste sorties + WIP affichage une sortie

--- a/templates/sortie/afficherSortie.html.twig
+++ b/templates/sortie/afficherSortie.html.twig
@@ -28,7 +28,7 @@
                     </tr>
                     <tr>
                         <td>Durée :</td>
-                        <td>{{ sortie.nbinscriptionsmax }}</td>
+                        <td>{{ sortie.duree }}</td>
                     </tr>
                     <tr>
                         <td>Decription et infos :</td>
