--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,17 @@
                                 {% endif %}
                             </div>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Lieux
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{{ path('lieux') }}">Liste des Lieux</a>
+                                {% if app.user is not null %}
+                                <a class="dropdown-item" href="{{ path('creerLieu') }}">Créer un lieu</a>
+                                {% endif %}
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
