--- a/templates/participants/login.html.twig
+++ b/templates/participants/login.html.twig
@@ -24,7 +24,7 @@
             <input type="password" name="_password" class="form-control" id="password" placeholder="Mot de passe">
         </div>
         <button type="submit" class="btn btn-primary">Connexion</button>
-        <input type="checkbox" id="remember_me" name="_remember_me" checked/>
+        <input type="checkbox" id="remember_me" name="_remember_me"/>
         <label for="remember_me">Keep me logged in</label>
     </form>
 </div>
