--- a/templates/participants/my_profil.html.twig
+++ b/templates/participants/my_profil.html.twig
@@ -2,10 +2,10 @@
 {% form_theme profilForm 'bootstrap_4_horizontal_layout.html.twig' %}
 
 {% block body %}
-<div class="container-lg">
+<div class="container">
   <div class="row">
     <div class="col-md-3" style="margin: 5% auto;">
-      <img id="preview" src="#" alt="photo de profil" width="240" height="240"/>
+      <img class="border" id="preview" src="{{ asset('uploads/profil_pictures/' ~ ppPath ~ '') }}" alt="photo de profil" width="240" height="240"/>
     </div>
     <div class="col-md-9">
         <h2 style="text-align:center">Mon Profil</h2>
@@ -13,13 +13,6 @@
         {{  form_start(profilForm) }}
 
         {{ form_widget(profilForm) }}
-
-        <div class="form-group row">
-          <label for="photoAUploader" class="col-sm-3 col-form-label">Ma photo :</label>
-          <div class="col-sm-5">
-            <input type="file" id="photoAUploader" name="photoAUploader" accept="image/png, image/jpeg">
-          </div>
-        </div>
 
         <div style="text-align:center">
           <button type="submit" class="btn btn-primary">Enregistrer</button>
@@ -43,7 +36,7 @@
 	  }
 	}
 	
-	$('input#photoAUploader').on('change', function() {
+	$('input#register_profilPicture').on('change', function() {
 		readURL(this);
 	});
 </script>
