liste/creation sortie fix + liste/creation lieu

--- a/templates/sortie/creerSortie.html.twig
+++ b/templates/sortie/creerSortie.html.twig
@@ -10,9 +10,13 @@
         position: relative;
         top: 5em;
     }
+    #detailsMap{
+    height: 400px;
+    }
 {% endblock %}
 
 {% block body %}
+    {% if dump is defined %}{{ dump }}{% endif %}
 <div id="formCreate">
     {{  form_start(createSortieForm) }}
 
