fix infos in "annuler Sortie"

--- a/templates/sortie/annulerSortie.html.twig
+++ b/templates/sortie/annulerSortie.html.twig
@@ -28,11 +28,11 @@
                 </tr>
                 <tr>
                     <td>Site organisateur :</td>
-                    <td></td>
+                    <td>{{ sortie.participant.sitesNoSite.nomSite }}</td>
                 </tr>
                 <tr>
                     <td>Lieu :</td>
-                    <td></td>
+                    <td>{{ sortie.lieu.nomlieu }}</td>
                 </tr>
             </table>
             <div id="formCreate">
